pep8 linting for this twitoff

--- a/twitoff_23/Pipfile
+++ b/twitoff_23/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 flask = "*"
 jinja2 = "*"
 flask-sqlalchemy = "*"
+sqlalchemy = "*"
+pep8 = "*"
+flake8 = "*"
+pylint = "*"
 
 [dev-packages]
 
